--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,19 @@
     border-radius: 5px;
     cursor: pointer;
   }
+
+  #exportPath {
+    position: fixed;
+    top: 10px;
+    right: 663px;
+    float: left;
+    background-color: #008CBA;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
   
   #deleteButton {
     position: fixed;
