--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html> 
   <head>
-    <title>Escalade</title> 
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <title>Escalade {{ name }}</title> 
+    <link rel="stylesheet" href={{ url_for('static', filename= 'css/styles.css') }}>
   </head>
   <body>
-    <button id="geneticPath" onclick="getGeneticPath()">Chemin génétique</button>
     <button id="exportPath" onclick="exportPathFile()">Exporter un chemin</button>
     <button id="uploadPath" onclick="uploadPathFile()">Charger un chemin</button>
     <button id="takePositionsButton" onclick="uploadPositionFile()">Importer mur</button>
@@ -20,6 +19,6 @@
       <label for="dist">Distance max</label>
     </div>
     <label>Echelle</label>
-    <script src="../static/js/script.js"></script>
+    <script src={{ url_for('static', filename= 'js/script.js') }} onload="alert('{{ wall }}')"></script>
   </body>
 </html>
