--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -87,3 +87,16 @@
     border-radius: 5px;
     cursor: pointer;
   }
+
+  #symbolicPath {
+    position: fixed;
+    top: 10px;
+    right: 975px;
+    float: left;
+    background-color: #008CBA;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
