--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -88,6 +88,19 @@
     cursor: pointer;
   }
 
+  #aStarPath {
+    position: fixed;
+    top: 10px;
+    right: 1110px;
+    float: left;
+    background-color: #008CBA;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
   #symbolingPath {
     position: fixed;
     top: 10px;
