--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -114,6 +114,19 @@
     cursor: pointer;
   }
 
+  #QPath {
+    position: fixed;
+    top: 10px;
+    right: 1210px;
+    float: left;
+    background-color: #008CBA;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
 #coord {
   position: fixed;
   top: 70px;
